<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_margin="20dp"
    android:paddingHorizontal="10sp"
    android:paddingBottom="30sp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/book_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="175sp"
            android:adjustViewBounds="true"
            android:src="@drawable/james_bond_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16sp"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:id="@+id/book_movie_title"
            android:layout_width="0dp"
            android:layout_height="27sp"
            android:layout_marginHorizontal="8sp"
            android:text="@string/movie_title"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/book_movie_poster" />

        <TextView
            android:id="@+id/book_movie_genres"
            android:layout_width="0dp"
            android:layout_height="19sp"
            android:text="@string/movie_genre"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@id/book_movie_title"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/book_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/book_movie_title" />

        <TextView
            android:id="@+id/book_movie_description"
            android:layout_width="0dp"
            android:layout_height="130sp"
            android:scrollbars="vertical"
            android:text="@string/lorem_ipsum"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/book_movie_genres"
            app:layout_constraintStart_toStartOf="@id/book_movie_title"
            app:layout_constraintEnd_toEndOf="@id/book_movie_title"
            />


        <TextView
            android:id="@+id/book_movie_theatre_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cinema"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="24sp"
            app:layout_constraintTop_toBottomOf="@id/book_movie_description"
            app:layout_constraintStart_toStartOf="@id/book_movie_poster"
            app:layout_constraintEnd_toEndOf="@id/book_movie_title"
            />

        <View
            android:id="@+id/book_movie_theatre_bar"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/book_movie_theatre_text_view"
            app:layout_constraintStart_toStartOf="@id/book_movie_theatre_text_view"
            app:layout_constraintEnd_toEndOf="@id/book_movie_theatre_text_view"
            android:layout_marginTop="45sp"
            android:background="@color/colorPrimary"
            />

        <Spinner
            android:id="@+id/book_movie_theatre"
            android:layout_width="0dp"
            android:layout_height="40sp"
            app:layout_constraintTop_toBottomOf="@id/book_movie_theatre_text_view"
            app:layout_constraintStart_toStartOf="@id/book_movie_theatre_text_view"
            app:layout_constraintEnd_toEndOf="@id/book_movie_theatre_text_view"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/book_movie_date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/book_movie_theatre_bar"
            android:layout_marginTop="24sp"
            app:layout_constraintStart_toStartOf="@id/book_movie_theatre_text_view"
            app:layout_constraintEnd_toEndOf="@id/book_movie_theatre_text_view"
            />

        <View
            android:id="@+id/book_movie_date_bar"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/book_movie_date_text_view"
            app:layout_constraintStart_toStartOf="@id/book_movie_date_text_view"
            app:layout_constraintEnd_toEndOf="@id/book_movie_date_text_view"
            android:layout_marginTop="45sp"
            android:background="@color/colorPrimary"
            />

        <Spinner
            android:id="@+id/book_movie_date"
            android:layout_width="0dp"
            android:layout_height="40sp"
            app:layout_constraintTop_toBottomOf="@id/book_movie_date_text_view"
            app:layout_constraintStart_toStartOf="@id/book_movie_date_text_view"
            app:layout_constraintEnd_toEndOf="@id/book_movie_date_text_view"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/book_movie_time_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/time"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/book_movie_date_text_view"
            app:layout_constraintStart_toStartOf="@id/book_movie_date_text_view"
            app:layout_constraintTop_toBottomOf="@id/book_movie_date_bar" />

        <View
            android:id="@+id/book_movie_time_bar"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/book_movie_time_text_view"
            app:layout_constraintStart_toStartOf="@id/book_movie_time_text_view"
            app:layout_constraintEnd_toEndOf="@id/book_movie_time_text_view"
            android:layout_marginTop="45sp"
            android:background="@color/colorPrimary"
            />

        <Spinner
            android:id="@+id/book_movie_time"
            android:layout_width="0dp"
            android:layout_height="40sp"
            app:layout_constraintTop_toBottomOf="@id/book_movie_time_text_view"
            app:layout_constraintStart_toStartOf="@id/book_movie_time_text_view"
            app:layout_constraintEnd_toEndOf="@id/book_movie_time_text_view"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            />

        <TextView android:id="@+id/book_movie_total_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:text="@string/total"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/book_movie_time_text_view"
            app:layout_constraintStart_toStartOf="@id/book_movie_time_text_view"
            app:layout_constraintTop_toBottomOf="@id/book_movie_time_bar" />

        <EditText
            android:id="@+id/book_movie_total"
            android:layout_width="0dp"
            android:layout_height="60sp"
            android:enabled="false"
            android:text="@string/total_amount"
            app:layout_constraintTop_toBottomOf="@id/book_movie_total_text_view"
            app:layout_constraintStart_toStartOf="@id/book_movie_total_text_view"
            app:layout_constraintEnd_toEndOf="@id/book_movie_total_text_view"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            />

        <Button
            android:id="@+id/book_movie_checkout"
            android:layout_width="0dp"
            android:layout_height="80sp"
            android:text="@string/checkout"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@drawable/movie_ticket"
            app:layout_constraintTop_toBottomOf="@id/book_movie_total"
            app:layout_constraintStart_toStartOf="@id/book_movie_total"
            app:layout_constraintEnd_toEndOf="@id/book_movie_total"
            android:layout_marginTop="24sp"
            />

        <ProgressBar
            android:id="@+id/book_movie_checkout_progress"
            android:layout_width="0dp"
            android:layout_height="80sp"
            android:visibility="invisible"
            android:tint="@color/colorPrimary"
            android:background="@drawable/movie_ticket"
            app:layout_constraintTop_toTopOf="@id/book_movie_checkout"
            app:layout_constraintStart_toStartOf="@id/book_movie_checkout"
            app:layout_constraintEnd_toEndOf="@id/book_movie_checkout"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>