<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".BookMovieActivity">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:src="@drawable/menu"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/nav_bar_separator"
        android:contentDescription="@string/menu_icon" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@id/menu"
        app:layout_constraintEnd_toEndOf="@id/menu"
        app:layout_constraintTop_toTopOf="@id/menu"
        app:layout_constraintBottom_toBottomOf="@id/menu"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tikitihub"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30sp"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <SearchView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65sp"
        android:commitIcon="@drawable/search"
        android:goIcon="@drawable/search"
        android:searchIcon="@drawable/search"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/nav_bar_separator"
        app:layout_constraintTop_toTopOf="@id/title" />

    <View
        android:id="@+id/nav_bar_separator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        android:layout_marginTop="20sp"
        android:background="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/nav_bar_separator"
        app:layout_constraintStart_toStartOf="@id/nav_bar_separator"
        android:layout_marginVertical="15sp"
        />

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="150sp"
        android:layout_height="200sp"
        android:src="@drawable/james_bond_poster"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintStart_toStartOf="@id/nav_bar_separator"
        android:layout_marginTop="20sp"
        />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textColor="@color/colorAccent"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/movie_description"
        app:layout_constraintTop_toTopOf="@id/movie_poster"
        />

    <TextView
        android:id="@+id/movie_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3sp"
        android:text="@string/movie_genre"
        android:textColor="@color/colorAccent"
        android:alpha="0.7"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/movie_title"
        app:layout_constraintTop_toBottomOf="@id/movie_title" />

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="0dp"
        android:layout_marginTop="3sp"
        android:layout_marginStart="15sp"
        android:text="@string/movie_description"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:alpha="0.7"
        app:layout_constraintStart_toEndOf="@id/movie_poster"
        app:layout_constraintEnd_toEndOf="@id/nav_bar_separator"
        app:layout_constraintTop_toBottomOf="@id/movie_genres"
        app:layout_constraintBottom_toBottomOf="@id/movie_poster"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/movie_poster"
        android:layout_marginTop="30sp"
        app:layout_constraintStart_toStartOf="@id/nav_bar_separator"
        />

    <View
        android:id="@+id/date_bar"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintStart_toStartOf="@id/date"
        app:layout_constraintEnd_toEndOf="@id/nav_bar_separator"
        android:layout_marginTop="45sp"
        android:background="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/date_edit_text"
        android:layout_width="0dp"
        android:layout_height="40sp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintStart_toStartOf="@id/date"
        app:layout_constraintEnd_toEndOf="@id/nav_bar_separator"
        android:inputType="date"
        android:background="@android:color/transparent"
        />


    <TextView
        android:id="@+id/screening_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screening_type"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/date_bar"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="@id/nav_bar_separator"
        />


    <View
        android:id="@+id/screening_type_bar"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintTop_toBottomOf="@id/screening_type"
        app:layout_constraintStart_toStartOf="@id/screening_type"
        app:layout_constraintEnd_toEndOf="@id/nav_bar_separator"
        android:layout_marginTop="45sp"
        android:background="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/screening_type_edit_text"
        android:layout_width="0dp"
        android:layout_height="40sp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintTop_toBottomOf="@id/screening_type"
        app:layout_constraintStart_toStartOf="@id/screening_type"
        app:layout_constraintEnd_toEndOf="@id/nav_bar_separator"
        android:background="@android:color/transparent"
        android:inputType="text"
        android:autofillHints="2D" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/screening_type_bar"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="@id/nav_bar_separator"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/time_recyclerview"
        android:layout_width="0dp"
        android:layout_height="40sp"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="@id/nav_bar_separator"
        app:layout_constraintEnd_toEndOf="@id/nav_bar_separator"
        />

    <view
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.85"
        android:layout_height="wrap_content"
        android:padding="22sp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/checkout_button"
        app:layout_constraintEnd_toEndOf="@id/checkout_button"
        app:layout_constraintTop_toTopOf="@id/checkout_button"
        app:layout_constraintBottom_toBottomOf="@id/checkout_button"
        />

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.81"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/time_recyclerview"
        app:layout_constraintStart_toStartOf="@id/nav_bar_separator"
        app:layout_constraintEnd_toEndOf="@id/nav_bar_separator"
        android:layout_marginTop="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tikitihub_2020"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toBottomOf="@id/checkout_button"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:padding="8sp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>